# Bluetrends

./: .gitignore  README.md  docker-compose.yml  download_models.py  pyproject.toml  requirements.txt  sample-datastream.json
airflow/: Dockerfile  entrypoint.sh
mysql/initdb/: schema.sql
python/: Dockerfile  requirements.txt
scripts/: precache_hf.sh
spark/: Dockerfile  spark-defaults.conf
src/airflow/dags/: etl_dag.py  jetstream_etl_dag.py  keyword_trends_dag.py
src/dashboard/: Dockerfile  app.py  callbacks.py  callbacks_compare.py  components.py  data_loader.py  requirements.txt
src/dashboard/assets/: fonts.css
src/dashboard/pages/: compare.py  keywords.py
src/dashboard/tabs/: __init__.py  activity.py  overview.py
src/ingestion/: extract_keyword.py  jetstream_consumer.py  jetstream_producer.py  random_number_producer.py  sentiment.py
src/processing/: spark_test.py
src/processing/jobs/: batch_process_posts.py  categorize.py  jetstream_consumer.py  jetstream_processor.py  keyword_trends.py  keyword_trends_job.py  run_analytics.py
src/processing/transformations/: sentiment_analysis.py
