[project]
name = "bluetrends"
version = "0.1.0"
description = "Capstone project for Dev10 Data Engineering 2025-3 Cohort"
authors = [
    {name = "Taylor Merwin",email = "taylor.merwin@gmail.com"}
]
readme = "README.md"
# requires-python = ">=3.10,<4.dev0"
requires-python = ">=3.10,<3.13"

dependencies = [
    "pyspark (>=3.5.5,<4.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "kafka-python (>=2.1.5,<3.0.0)",
    "keybert (>=0.9.0,<0.10.0)",
    "better-profanity (>=0.7.0,<0.8.0)",
    "langdetect (>=1.0.9,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "mysql-connector-python (==9.3.0)",
    "apache-airflow (>=3.0.0,<4.0.0)",
    "dash (>=3.0.3,<4.0.0)",
    "callbacks (>=0.3.0,<0.4.0)",
    "dynaconf (>=3.2.10,<4.0.0)",
    "dash-bootstrap-components (>=2.0.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
huggingface-hub = {extras = ["cli"], version = "^0.30.2"}

